--- a/COVID19questions.Rmd
+++ b/COVID19questions.Rmd
@@ -62,8 +62,10 @@ Next, let's consider the shape of the data more closely.
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = ""}
 require(ggplot2)
+library(scales)
 NSWcor<-cor.test(as.numeric(NSW$date),NSW$cases) 
-g<-ggplot( data = NSW, aes( date, cases )) + geom_point() + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days")) + ylim(0,NA)
+g<-ggplot( data = NSW, aes( date, cases )) + geom_point() + theme_bw() + ylab("Confirmed cases in NSW") +
+  scale_x_date(date_minor_breaks=("1 days"), date_breaks=("7 days"), labels = date_short() ) + ylim(0,NA)
 show(g)
 ```
 
