--- a/COVID19questions.Rmd
+++ b/COVID19questions.Rmd
@@ -25,8 +25,10 @@ The following plot shows the number of confirmed cases of COVID-19 infection in 
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = ""}
 require(ggplot2)
+library(scales)
 NSWcor<-cor.test(as.numeric(NSW$date),NSW$cases) 
-g<-ggplot( data = NSW, aes( date, cases )) + geom_point() + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days")) + ylim(0,NA)
+g<-ggplot( data = NSW, aes( date, cases )) + geom_point() + theme_bw() + ylab("Confirmed cases in NSW") + 
+  scale_x_date(date_minor_breaks=("1 days"), date_breaks=("7 days"), labels = date_format("%d %b")) + ylim(0,NA)
 show(g)
 ```
 
@@ -36,7 +38,8 @@ show(g)
 Linear regression is often used to predict one variable based on another, but it assumes the overall shape of the data is a straight line (plus or minus some random variability). 
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = "" }
-g<-ggplot( data = NSW, aes( date, cases )) + geom_point() + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days")) +
+g<-ggplot( data = NSW, aes( date, cases )) + geom_point() + theme_bw() + ylab("Confirmed cases in NSW") + 
+  scale_x_date(date_minor_breaks=("1 days"), date_breaks=("7 days"), labels = date_format("%d %b")) +
   geom_smooth(method='lm', fill=NA, color="darkred") +  ylim(0,NA) #+
   #annotate("text",x=as.Date("2020/3/7"),y=100, label=paste0("r=",round(NSWcor$estimate,2)), parse=FALSE) 
 show(g)
@@ -62,10 +65,9 @@ Next, let's consider the shape of the data more closely.
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = ""}
 require(ggplot2)
-library(scales)
 NSWcor<-cor.test(as.numeric(NSW$date),NSW$cases) 
 g<-ggplot( data = NSW, aes( date, cases )) + geom_point() + theme_bw() + ylab("Confirmed cases in NSW") +
-  scale_x_date(date_minor_breaks=("1 days"), date_breaks=("7 days"), labels = date_short() ) + ylim(0,NA)
+  scale_x_date(date_minor_breaks=("1 days"), date_breaks=("7 days"), labels = date_format("%d %b")) + ylim(0,NA)
 show(g)
 ```
 
@@ -93,7 +95,9 @@ NSW$exponential<-22
 for(i in 2:length(NSW$date)) {
   NSW$exponential[i] <- NSW$exponential[i-1]*(1+pctIncrease/100)
 }
-h<-ggplot( data = NSW, aes( date, cases )) + geom_point() + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days")) + ylim(0,15000) + xlim(as.Date(c(NA, endDate))) +
+h<-ggplot( data = NSW, aes( date, cases )) + geom_point() + theme_bw() + ylab("Confirmed cases in NSW") + 
+  ylim(0,15000) + xlim(as.Date(c(NA, endDate))) +
+  scale_x_date(date_minor_breaks=("1 days"), date_breaks=("7 days"), labels = date_format("%d %b")) +
   geom_point(data = NSW, aes(x = date, y = exponential+100), color = "blue", alpha=.6) +
   annotate("text",x=as.Date("2020/4/01"),y=5200, label="20% daily growth", color="blue", size=3.5, angle=66)
 show(h)
@@ -142,7 +146,8 @@ NSW$increaseE <- pctIncrease #Because manual gets it slightly wrong probably bec
 #NSW$increaseE <- increaseE
 excludeFirst <- tail(NSW,-1)
 
-j<-ggplot( data = excludeFirst, aes( date, 100*increase/cases )) + geom_point() + theme_bw() + ylab("% increase in NSW confirmed cases") + scale_x_date(date_minor_breaks=("1 days")) + ylim(0,40) + xlim(as.Date(c(NA, endDate))) +
+j<-ggplot( data = excludeFirst, aes( date, 100*increase/cases )) + geom_point() + theme_bw() + ylab("% increase in NSW confirmed cases") +   scale_x_date(date_minor_breaks=("1 days"), date_breaks=("7 days"), labels = date_format("%d %b")) +
+  ylim(0,40) +
     geom_point(data = excludeFirst, aes(x = date, y = increaseE), color = "blue", alpha=.6)
 show(j)
 ```
@@ -158,7 +163,7 @@ The below plot shows again, for each day, the percentage increase in cases from 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = "" }
 
 NSWcori<-cor.test(as.numeric(NSW$date),NSW$increase/NSW$cases) 
-h<-ggplot( data = excludeFirst, aes( date, 100*increase/cases )) + geom_point() + theme_bw() + ylab("Percent increase in NSW confirmed cases") + scale_x_date(date_minor_breaks=("1 days")) 
+h<-ggplot( data = excludeFirst, aes( date, 100*increase/cases )) + geom_point() + theme_bw() + ylab("Percent increase in NSW confirmed cases") + scale_x_date(date_minor_breaks=("1 days"), date_breaks=("7 days"), labels = date_format("%d %b"))
 show(h)
 ```
 
@@ -183,7 +188,9 @@ When growth is exponential, we are interested in knowing what the number of case
 Logarithms turn multiplication into addition, which means that on a logarithmic axis, stepping upward by a constant amount does not mean the number of cases has increased by the same number each time, but rather that it's been multiplied by the same number each time.
 
 ```{r, semilogTwenty, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = "" }
-k<-ggplot( data = NSW, aes( date, exponential )) + geom_point(color="blue",alpha=.6) + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days")) + ylim(0,NA) +  theme(panel.grid.minor.y = element_blank()) + xlim(as.Date(c(NA, endDate))) +
+k<-ggplot( data = NSW, aes( date, exponential )) + geom_point(color="blue",alpha=.6) + theme_bw() + ylab("Confirmed cases in NSW") +
+  scale_x_date(date_minor_breaks=("1 days"), date_breaks=("7 days"), labels = date_format("%d %b")) + 
+  ylim(0,NA) +  theme(panel.grid.minor.y = element_blank()) +
     annotate("text",x=as.Date("2020/3/15"),y=112, label="20% growth daily", color="blue", size=3, angle=44)
 show(k + scale_y_log10() )
 ```
@@ -206,10 +213,10 @@ for(i in 2:length(NSW$date)) {
   NSW$ten[i] <- NSW$ten[i-1]*(1+pctIncrease/100)
 }
 require(scales)
-mm<-ggplot( data = NSW, aes( date, exponential )) + geom_point(color="blue") + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days")) + ylim(0,NA) + 
+mm<-ggplot( data = NSW, aes( date, exponential )) + geom_point(color="blue") + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days"), date_breaks=("7 days"), labels = date_format("%d %b")) + ylim(0,NA) + 
   geom_point(aes(x = date, y = thirty), color = "red", alpha=.6) + 
   geom_point(aes(x = date, y = ten), color = "darkgreen", alpha=.6) + 
-  theme(panel.grid.minor.y = element_blank()) +  xlim(as.Date(c(NA, endDate))) +
+  theme(panel.grid.minor.y = element_blank()) +
   scale_y_continuous(trans="log", labels = scales::comma, breaks = c(100,1000,10000,100000,1000000)) +  #comma stops scientific notation
   #                     function(x) format(x, big.mark = ",")) +
   annotate("text",x=as.Date("2020/3/13"),y=38, label="10% daily growth", color="darkgreen", size=3, angle=18) +
@@ -229,9 +236,10 @@ Plotting the actual data from NSW (black dots), thanks to the  blue dots compari
 After 28 March, growth was slower - the data after that date no longer increase as steeply as the blue 20% growth dots.
 
 ```{r, semilogboth, echo=FALSE, message=FALSE, warning=FALSE, fig.height=4, fig.width=4,  fig.cap = "" }
-h<-ggplot( data = NSW, aes( date, cases )) + geom_point() + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days")) + ylim(0,NA) + 
+h<-ggplot( data = NSW, aes( date, cases )) + geom_point() + theme_bw() + ylab("Confirmed cases in NSW") + 
+  scale_x_date(date_minor_breaks=("1 days"), date_breaks=("7 days"), labels = date_format("%d %b"))  + ylim(0,NA) + 
     annotate("text",x=as.Date("2020/3/15"),y=250, label="20% daily growth", color="blue", size=3, angle=45) +
-  geom_point(data = NSW, aes(x = date, y = exponential), color = "blue", alpha=.6) + xlim(as.Date(c(NA, endDate))) +
+  geom_point(data = NSW, aes(x = date, y = exponential), color = "blue", alpha=.6) +
   #  geom_point(aes(x = date, y = thirty), color = "red", alpha=.6) + 
    # geom_point(aes(x = date, y = ten), color = "darkgreen", alpha=.6) + 
   scale_y_log10()
@@ -260,12 +268,12 @@ One way to summarise what a particular growth rate means is to consider that eac
 #1.20^(seq(1,8)) #Calculate doubling
 #Calculate doubling time with 2=rate^doublingDays.   doublingDays = 2^(1/rate)
 
-mm<-ggplot( data = NSW, aes( date, exponential )) + geom_point(color="blue") + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days")) + ylim(0,NA) + 
+mm<-ggplot( data = NSW, aes( date, exponential )) + geom_point(color="blue") + theme_bw() + ylab("Confirmed cases in NSW") + scale_x_date(date_minor_breaks=("1 days"), date_breaks=("7 days"), labels = date_format("%d %b")) + ylim(0,NA) + 
   geom_point(aes(x = date, y = thirty), color = "red", alpha=.6) + 
   geom_point(aes(x = date, y = ten), color = "darkgreen", alpha=.6) + 
   theme(panel.grid.minor.y = element_blank()) +scale_y_log10() +
   scale_y_continuous(trans="log", labels = scales::comma, breaks = c(100,1000,10000,100000,1000000)) +  #comma stops scientific notation
-  annotate("text",x=as.Date("2020/3/18"),y=50, label="10% daily growth, doubling about every 8 days", color="darkgreen", size=3, angle=17) +annotate("text",x=as.Date("2020/3/21"),y=290, label="20% daily growth, doubling about every 4 days", color="blue", size=3, angle=33) + xlim(as.Date(c(NA, endDate))) +
+  annotate("text",x=as.Date("2020/3/18"),y=50, label="10% daily growth, doubling about every 8 days", color="darkgreen", size=3, angle=17) +annotate("text",x=as.Date("2020/3/21"),y=290, label="20% daily growth, doubling about every 4 days", color="blue", size=3, angle=33) + 
   annotate("text",x=as.Date("2020/3/22"),y=1800, label="30% daily growth, doubling about every 3 days", color="red", size=3, angle=42)
 show(mm)
 ```
